# research-tbilisi-flats

./: README.md  analysis.ipynb  pyproject.toml
data/: OrtachalaIsaniupto1000.json  VeraVakeupto1000.json  arendapokupkageorgia.json  kvartiry_v_tbilisi.json  kvartiry_v_tbilisi_2.json  myflatintbilisi.json  realtorKristina.json  tbilisi_arenda.json  tbilisi_arenda_ge.json
