[tool.poetry]
name = "research_tbilisi_flats"
version = "0.1.0"
description = "Shallow quantitative analysis of Tbilisi rent price based on data from Telegram Realty Channels"
authors = ["Maksim Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
regex = "^2022.6.2"
ipykernel = "^6.13.1"
jupyterlab = "^3.4.3"
scipy = "^1.8.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
